--- a/src/pages/vocabulary/ui/vocabulary-layout/vocabulary-intro/VocabularyIntro.module.scss
+++ b/src/pages/vocabulary/ui/vocabulary-layout/vocabulary-intro/VocabularyIntro.module.scss
@@ -3,9 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: var(--gap-large);
   width: 100%;
-  min-height: calc(100vh - var(--dashboard-header-height) - var(--dashboard-footer-height));
+  min-height: 100vh;
   padding: var(--section-padding-y) var(--section-padding-x);
   background: var(--bg-color-tertiary);
   color: var(--text-color-secondary);
